--- a/style/index.css
+++ b/style/index.css
@@ -74,10 +74,16 @@ button:hover {
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
+.preview-item > video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .file-name {
   text-align: center;
   margin-top: 5px;
   font-size: 12px;
   color: #333;
+  position: absolute;
+  inset: 0;
 }
