Fix: text position

--- a/style/projection.css
+++ b/style/projection.css
@@ -22,7 +22,7 @@ body {
 #displayText {
   position: absolute;
   top: 50vh; /* テキストを下に配置 */
-  left: 50vh;
+  left: 50vw;
   transform: translate(-50%, -50%); /* 水平方向に中央配置 */
   font-size: 24px; /* テキストサイズ */
   color: white; /* テキスト色 */
