--- a/style/index.css
+++ b/style/index.css
@@ -4,22 +4,7 @@ body {
   margin: 20px;
   background-color: #f4f4f4;
   color: #333;
-}
-
-h1,
-h2 {
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.input-group {
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+  user-select: none;
 }
 
 input[type="file"],
@@ -28,7 +13,6 @@ input[type="number"],
 select {
   width: 100%;
   padding: 8px;
-  margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
@@ -48,23 +32,26 @@ button:hover {
   background-color: #4cae4c;
 }
 
-#hideLogo {
-  background-color: #d9534f;
+#header_button {
+  position: absolute;
+  top: 20px;
+  right: 10px;
 }
 
-#hideLogo:hover {
-  background-color: #c9302c;
-}
-
-/* メディアプレビュー用 */
-.preview-container {
+#medias {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   gap: 10px;
   margin-top: 10px;
+  margin-bottom: 1rem;
 }
 
-.preview-item {
+#medias.highlight,
+#logoDroparea.highlight {
+  background: white;
+}
+
+#medias > .item {
   width: 100px;
   height: 100px;
   background-size: cover;
@@ -74,11 +61,27 @@ button:hover {
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-.preview-item > video {
+
+#medias > .item > video {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+.add-item-btn {
+  border: solid 1px #555;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  order: 1;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
 .file-name {
   text-align: center;
   margin-top: 5px;
@@ -86,4 +89,65 @@ button:hover {
   color: #333;
   position: absolute;
   inset: 0;
+}
+
+#config {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 10px;
+}
+
+fieldset > legend {
+  font-weight: bold;
+}
+
+fieldset > .inputs {
+  display: flex;
+  flex-direction: column; /* 縦方向に配置 */
+  gap: 10px; /* 要素間のスペース */
+}
+
+fieldset > .inputs > div {
+  display: flex;
+  flex-direction: row; /* 縦方向に配置 */
+  align-items: center;
+}
+
+fieldset > .inputs > div > .key {
+  flex: 0 0 30%;
+}
+
+fieldset > .inputs > div > .val {
+  flex: 0 0 70%;
+}
+
+#logoPreview {
+  margin: auto;
+  height: 100px;
+  display: inline-block;
+  cursor: pointer;
+}
+#logoPreview > div {
+  width: 100px;
+  height: 100px;
+}
+
+#logoPreview > img {
+  max-height: 100%;
+}
+
+/**
+ * Shift Mode
+ */
+.shift #medias {
+  background-color: #f003;
+}
+
+body .shift {
+  position: absolute;
+  left: -9999px; /* 画面外に移動 */
+}
+
+body.shift .shift {
+  position: static;
 }
