--- a/style/projection.css
+++ b/style/projection.css
@@ -67,3 +67,16 @@ body {
     background-color: transparent;
   }
 }
+
+.bounce {
+  animation: bounce 0.3s ease-in-out;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+}
