--- a/style/projection.css
+++ b/style/projection.css
@@ -1,54 +1,43 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: black;
-  color: white;
-  overflow: hidden; /* スクロールバーを非表示 */
-  position: relative; /* 子要素を絶対位置にするため */
+  overflow: hidden;
+  position: relative;
 }
 
-#logo-layer {
-  position: fixed;
-  inset: 0;
-}
-
-#logoElement {
-  display: none; /* 初期状態で非表示 */
-  position: absolute;
-}
-
-#displayText {
-  position: absolute;
-  top: 50vh; /* テキストを下に配置 */
-  left: 50vw;
-  transform: translate(-50%, -50%); /* 水平方向に中央配置 */
-  font-size: 24px; /* テキストサイズ */
-  color: white; /* テキスト色 */
-  text-align: center; /* 中央揃え */
-  z-index: 20; /* テキストを最前面に表示 */
-}
-
-#media {
+#media-layer {
   position: absolute;
   width: 100%;
   height: 100%;
   inset: 0;
 }
 
-#media.tile {
-  display: flex; /* タイル表示 */
-  flex-wrap: wrap; /* 複数行にする */
+#media-layer.tile {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#media.tile > * {
+#media-layer.tile > * {
   background-size: cover;
   background-position: center;
-  border: none; /* 境界線を消す */
+  border: none;
 }
 
 .invertColor {
   filter: invert(100%);
+}
+
+#text-layer {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+#logo-layer {
+  position: fixed;
+  inset: 0;
 }
 
 #flash {
@@ -73,7 +62,8 @@ body {
 }
 
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: scale(1);
   }
   50% {
